oasis-macros/tests/ui/bad_rpc_sig.stderr
error: RPC methods cannot declare an ABI.
  --> $DIR/bad_rpc_sig.rs:11:16
   |
11 |     pub unsafe extern "C" fn wtf<T: std::fmt::Debug>(&self, ctx: &Context, val: T) -> Result<()> {
   |                ^^^^^^

error: RPC methods may not be unsafe.
  --> $DIR/bad_rpc_sig.rs:11:9
   |
11 |     pub unsafe extern "C" fn wtf<T: std::fmt::Debug>(&self, ctx: &Context, val: T) -> Result<()> {
   |         ^^^^^^

error: RPC methods may not have generic type parameters.
  --> $DIR/bad_rpc_sig.rs:11:33
   |
11 |     pub unsafe extern "C" fn wtf<T: std::fmt::Debug>(&self, ctx: &Context, val: T) -> Result<()> {
   |                                 ^

error: aborting due to 3 previous errors

